--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/main/java/com/wang/green/controller=UTF-8
+encoding//src/main/resources/json.txt=UTF-8
+encoding//src/main/webapp/register.jsp=UTF-8
 encoding/<project>=UTF-8
