--- a/src/main/resources/conf/sqlmap/jdbc.properties
+++ b/src/main/resources/conf/sqlmap/jdbc.properties
@@ -1,4 +1,8 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/green?characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://127.0.0.1:3306/demo?useUnicode=true&characterEncoding=UTF-8
 jdbc.username=root
-jdbc.password=111111
+jdbc.password=123456
+
+druid.pool.size.max=20
+druid.pool.size.min=3
+druid.pool.size.init=3
