--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.soshow</groupId>
-	<artifactId>ssi</artifactId>
+	<artifactId>green</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ssi Maven Webapp</name>
@@ -183,6 +183,6 @@
 				
 	</dependencies>
 	<build>
-		<finalName>ssi</finalName>
+		<finalName>green</finalName>
 	</build>
 </project>
