--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -31,7 +31,8 @@
 	<!-- 指定spring配置文件位置 -->  
 	<context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath*:conf/spring/applicationContext*.xml</param-value>
+        <param-value>classpath*:conf/spring/applicationContext-mvc.xml
+        </param-value>
     </context-param>
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
