--- a/pom.xml
+++ b/pom.xml
@@ -194,7 +194,26 @@
 		    <artifactId>slf4j-api</artifactId>
 		    <version>1.7.8</version>
 		</dependency>
-				
+		
+		<!-- Excel处理jar包 -->	
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.15</version>
+		</dependency>		
+		<!-- https://mvnrepository.com/artifact/net.sf.jxls/jxls-core -->
+		<dependency>
+			<groupId>net.sf.jxls</groupId>
+			<artifactId>jxls-core</artifactId>
+			<version>1.0.6</version>
+		</dependency>
+		 <!-- cache begin -->
+	 <dependency>
+		  <groupId>redis.clients</groupId>
+		  <artifactId>jedis</artifactId>
+		  <version>2.7.0</version>
+	 </dependency>
+
 	</dependencies>
 	<build>
 		<finalName>green</finalName>
