--- a/pom.xml
+++ b/pom.xml
@@ -214,6 +214,15 @@
 		  <version>2.7.0</version>
 	 </dependency>
 
+	 <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+	 <dependency>
+	    <groupId>com.alibaba</groupId>
+	    <artifactId>fastjson</artifactId>
+	    <version>1.2.20</version>
+	 </dependency>
+		 
+
+
 	</dependencies>
 	<build>
 		<finalName>green</finalName>
