--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,14 +14,6 @@
 		<param-value>classpath*:log4j.properties</param-value>
 	</context-param>
 	
-	<!-- spring核心 -->
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>
-			classpath:conf/spring/applicationContext-common.xml
-		</param-value>
-	</context-param>
-
 	<!--配置DispatcherServlet -->
 	<servlet>
 		<servlet-name>spring-dispatcher</servlet-name>
@@ -29,7 +21,7 @@
 		<!-- 配置SpringMVC需要加载的配置文件 spring-xxx.xml -->
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>classpath:conf/spring/applicationContext-mvc.xml</param-value>
+			<param-value>classpath:conf/spring/spring-*.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
