添加elastic-job简单实例

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -9,3 +9,4 @@ encoding//src/main/java/greensale.sql=UTF-8
 encoding//src/main/resources/conf/application.properties=UTF-8
 encoding//src/main/resources/json.txt=UTF-8
 encoding//src/main/webapp/register.jsp=UTF-8
+encoding/<project>=UTF-8
